--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Comedy'
 - !lcc 'PN'
 - !lcsh 'Wit and humor -- History and criticism'
+- GITenberg
 title: An Essay towards Fixing the True Standards of Wit, Humour, Railery, Satire,
   and Ridicule (1744)
 url: http://www.gutenberg.org/ebooks/16233
